fix overlap issue

--- a/blocks/v2-inpage-navigation/v2-inpage-navigation.css
+++ b/blocks/v2-inpage-navigation/v2-inpage-navigation.css
@@ -11,7 +11,7 @@
   position: sticky;
   top: var(--nav-height);
   width: 100%;
-  z-index: 2;
+  z-index: 99;
 }
 
 .v2-inpage-navigation__wrapper {
